<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.example.michael.betterlesson.AddPdfActivity">

    <LinearLayout
    android:id="@+id/upload_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="0.8"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="35dp"
    android:layout_marginRight="35dp"
    android:padding="7dp"
    android:background="@drawable/hw_image_border">

    <com.github.barteksc.pdfviewer.PDFView
        android:id="@+id/pdf_viewer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/tap_to_upload_text"
        style="@style/EmptyListTextStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/tap_to_upload_file" />

</RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="0.2">
    <Button
        style="@style/ButtonText"
        android:id="@+id/upload_file_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_button"/>
    </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:id="@+id/upload_file_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

      <TextView
          style="@style/EmptyListTextStyle"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/uploading_file"/>

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
